helm-values/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.camunda8.stackit.gg
      secretName: keycloak-tls-secret
  rules:
    - host: keycloak.camunda8.stackit.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-keycloak-service
                port:
                  number: 8080
